<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragments.DistanceReportFragment">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/layout_divider_8dp"
        android:gravity="center"
        android:minHeight="@dimen/margin_48dp"
        android:padding="@dimen/margin_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/point"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vehicle_number"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/address"
            android:textStyle="bold" />
    </LinearLayout>

    <include layout="@layout/view_divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/adapter_distance_report_item" />

            <LinearLayout
                android:id="@+id/totalDistanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="@drawable/layout_divider_8dp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:minHeight="@dimen/margin_48dp"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/total_distance_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalDistanceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/placeholder_distance"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error_message_no_list_found"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exportReportIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_16dp"
            android:clickable="true"
            android:enabled="true"
            app:backgroundTint="@color/bg_floating_action_button"
            android:contentDescription="@string/export_report"
            android:src="@drawable/baseline_file_download_24" />

    </FrameLayout>


</LinearLayout>